feat: 完善训练中心支持动态添加框架和参数等
