# models/ai.go
@@ -12,7 +12,6 @@ import (
 	"os/exec"
 	"qting-ai/tools"
 	"strings"
-	"time"
 )
 
 const (
@@ -34,41 +33,92 @@ const (
 	UnknownInt  = 110
 )
 
-type AiTrain struct {
-	AiFrameworkId       int       `json:"aiFrameworkId"`
-	ProjectId           int       `yaml:"projectId"` // 训练中心使用 项目名
-	Taskid              string    `json:"taskId"`
-	Taskname            string    `json:"taskName"`
-	Projectname         string    `json:"projectName"`
-	Assetstype          string    `json:"assetsType"`
-	Providertype        string    `json:"providerType"`
-	Batchsize           int       `json:"batchSize"`
-	Imagewidth          int       `json:"imageWidth"`
-	Imageheight         int       `json:"imageHeight"`
-	Maxiter             int       `json:"maxIter"`
-	Pretrainweight      string    `json:"pretrainWeight"`
-	Gpus                string    `json:"gpus"`
-	Triantype           int       `json:"trianType"`
-	Singletrain         []string  `json:"singleTrain"`
-	Angle               int       `json:"angle"`
-	Cell_stride         int       `json:"cell_stride"`
-	Cellsize            int       `json:"cellsize"`
-	Expand_size         []int     `json:"expand_size"`
-	Ignore_size         []int     `json:"ignore_size"`
-	Resizearrange       []float32 `json:"resizearrange"`
-	Trainwithnolabelpic int       `json:"trainwithnolabelpic"`
-	Subdivisionssize    int       `json:"subdivisionssize"`
-	Rmgeneratedata      int       `json:"rmgeneratedata"`
-	Split_ratio         float32   `json:"split_ratio"`
-	Recalldatum         int       `json:"recalldatum"`
-	Otherlabeltraintype int       `json:"otherlabeltraintype"`
-	Mergetrainsymbol    int       `json:"mergeTrainSymbol"`
-	Learnrate           float32   `json:"learnrate"`
-	Otherlabelstride    int       `json:"otherlabelstride"`
-	Isshuffle           bool      `json:"isshuffle"`
-}
+// 弃用
 
-type TrainConfig struct {
+//type AiTrain struct {
+//	AiFrameworkId       int       `json:"aiFrameworkId"`
+//	ProjectId           int       `yaml:"projectId"` // 训练中心使用 项目名
+//	Taskid              string    `json:"taskId"`
+//	Taskname            string    `json:"taskName"`
+//	Projectname         string    `json:"projectName"`
+//	Assetstype          string    `json:"assetsType"`
+//	Providertype        string    `json:"providerType"`
+//
+//	Batchsize           int       `json:"batchSize"`
+//	Imagewidth          int       `json:"imageWidth"`
+//	Imageheight         int       `json:"imageHeight"`
+//	Maxiter             int       `json:"maxIter"`
+//	Pretrainweight      string    `json:"pretrainWeight"`
+//	Gpus                string    `json:"gpus"`
+//	Triantype           int       `json:"trianType"`
+//	Singletrain         []string  `json:"singleTrain"`
+//	Angle               int       `json:"angle"`
+//	Cell_stride         int       `json:"cell_stride"`
+//	Cellsize            int       `json:"cellsize"`
+//	Expand_size         []int     `json:"expand_size"`
+//	Ignore_size         []int     `json:"ignore_size"`
+//	Resizearrange       []float32 `json:"resizearrange"`
+//	Trainwithnolabelpic int       `json:"trainwithnolabelpic"`
+//	Subdivisionssize    int       `json:"subdivisionssize"`
+//	Rmgeneratedata      int       `json:"rmgeneratedata"`
+//	Split_ratio         float32   `json:"split_ratio"`
+//	Recalldatum         int       `json:"recalldatum"`
+//	Otherlabeltraintype int       `json:"otherlabeltraintype"`
+//	Mergetrainsymbol    int       `json:"mergeTrainSymbol"`
+//	Learnrate           float32   `json:"learnrate"`
+//	Otherlabelstride    int       `json:"otherlabelstride"`
+//	Isshuffle           bool      `json:"isshuffle"`
+//}
+//
+//type TrainConfig struct {
+//	ProjectId  int `yaml:"projectId"` // 训练中心使用 项目名
+//	ProjectName string `yaml:"projectName"` // 训练中心使用 项目名
+//	ProjectPath string `yaml:"projectPath"` // 训练中心使用 项目路径
+//	ProviderType string `yaml:"providerType"` // 训练中心使用 框架名称
+//	Image string `yaml:"image"` // 训练中心使用 框架的docker镜像
+//	Volume string `yaml:"volume"` // 训练中心使用 框架镜像内部映射的地址
+//	TaskId string `yaml:"taskId"` // 训练中心使用 项目标识
+//
+//	Acc_suggest_pro []float32 `yaml:"acc_suggest_pro"`
+//	Anchortype int `yaml:"anchortype"`
+//	Angle int `yaml:"angle"`
+//	Batchsize int `yaml:"batchsize"`
+//	Cell_stride int `yaml:"cell_stride"`
+//	Cellsize int `yaml:"cellsize"`
+//	Expand_size []int `yaml:"expand_size"`
+//	F1_suggest_pro []float32 `yaml:"f1_suggest_pro"`
+//	Gpus string `yaml:"gpus"`
+//	Ignore_size []int `yaml:"ignore_size"`
+//	Imagesize []int `yaml:"imagesize"`
+//	Labelsfilename string `yaml:"labelsfilename"`
+//	Lablelist []string `yaml:"lablelist"`
+//	Maxiter int `yaml:"maxiter"`
+//	MergeTrainSymbol int `yaml:"mergeTrainSymbol"`
+//	Modeldcfgname string `yaml:"modeldcfgname"`
+//	Modelname string `yaml:"modelname"`
+//	Otherlabeltraintype int `yaml:"otherlabeltraintype"`
+//	Path_prefix string `yaml:"path_prefix"`
+//	Pixelareafpthresh []float32 `yaml:"pixelareafpthresh"`
+//	Pretraincfgname string `yaml:"pretraincfgname"`
+//	Pretrainweight string `yaml:"pretrainweight"`
+//	Random int `yaml:"random"`
+//	Recall_suggest_pro []float32 `yaml:"recall_suggest_pro"`
+//	Recalldatum int `yaml:"recalldatum"`
+//	Resizearrange []float32 `yaml:"resizearrange"`
+//	Rmgeneratedata int `yaml:"rmgeneratedata"`
+//	Scale int `yaml:"scale"`
+//	Singletrain []string `yaml:"singletrain"`
+//	Split_ratio float32 `yaml:"split_ratio"`
+//	Subdivisionssize int `yaml:"subdivisionssize"`
+//	Sum_suggest_pro []float32 `yaml:"sum_suggest_pro"`
+//	Trainwithnolabelpic int `yaml:"trainwithnolabelpic"`
+//	Triantype int `yaml:"triantype"`
+//	Learnrate float32 `yaml:"learnrate"`
+//	Otherlabelstride int `yaml:"otherlabelstride"`
+//	Isshuffle bool `yaml:"isshuffle"`
+//}
+
+type TrainBaseConfig struct {
 	ProjectId  int `yaml:"projectId"` // 训练中心使用 项目名
 	ProjectName string `yaml:"projectName"` // 训练中心使用 项目名
 	ProjectPath string `yaml:"projectPath"` // 训练中心使用 项目路径
@@ -76,46 +126,7 @@ type TrainConfig struct {
 	Image string `yaml:"image"` // 训练中心使用 框架的docker镜像
 	Volume string `yaml:"volume"` // 训练中心使用 框架镜像内部映射的地址
 	TaskId string `yaml:"taskId"` // 训练中心使用 项目标识
-
-	Acc_suggest_pro []float32 `yaml:"acc_suggest_pro"`
-	Anchortype int `yaml:"anchortype"`
-	Angle int `yaml:"angle"`
-	Batchsize int `yaml:"batchsize"`
-	Cell_stride int `yaml:"cell_stride"`
-	Cellsize int `yaml:"cellsize"`
-	Expand_size []int `yaml:"expand_size"`
-	F1_suggest_pro []float32 `yaml:"f1_suggest_pro"`
-	Gpus string `yaml:"gpus"`
-	Ignore_size []int `yaml:"ignore_size"`
-	Imagesize []int `yaml:"imagesize"`
-	Labelsfilename string `yaml:"labelsfilename"`
-	Lablelist []string `yaml:"lablelist"`
-	Maxiter int `yaml:"maxiter"`
-	MergeTrainSymbol int `yaml:"mergeTrainSymbol"`
-	Modeldcfgname string `yaml:"modeldcfgname"`
-	Modelname string `yaml:"modelname"`
-	Otherlabeltraintype int `yaml:"otherlabeltraintype"`
-	Path_prefix string `yaml:"path_prefix"`
-	Pixelareafpthresh []float32 `yaml:"pixelareafpthresh"`
-	Pretraincfgname string `yaml:"pretraincfgname"`
-	Pretrainweight string `yaml:"pretrainweight"`
-	Random int `yaml:"random"`
-	Recall_suggest_pro []float32 `yaml:"recall_suggest_pro"`
-	Recalldatum int `yaml:"recalldatum"`
-	Resizearrange []float32 `yaml:"resizearrange"`
-	Rmgeneratedata int `yaml:"rmgeneratedata"`
-	Scale int `yaml:"scale"`
-	Singletrain []string `yaml:"singletrain"`
-	Split_ratio float32 `yaml:"split_ratio"`
-	Subdivisionssize int `yaml:"subdivisionssize"`
-	Sum_suggest_pro []float32 `yaml:"sum_suggest_pro"`
-	Trainwithnolabelpic int `yaml:"trainwithnolabelpic"`
-	Triantype int `yaml:"triantype"`
-	Learnrate float32 `yaml:"learnrate"`
-	Otherlabelstride int `yaml:"otherlabelstride"`
-	Isshuffle bool `yaml:"isshuffle"`
 }
-
 // region Aoi获取的接口
 type OneAoiProject struct {
 	ProjectName  string        `json:"project_name"`
@@ -170,91 +181,13 @@ func V1GetModelsForAoi() (ml []interface{}, err error) {
 
 var c = cron.New(cron.WithSeconds())
 
-func DoTrain(m *AiTrain) (err error) {
-	fs := afero.NewOsFs()
-	if b, err := afero.ReadFile(fs, "conf/" + m.Providertype + ".yaml"); err == nil {
-		var temp TrainConfig
-		if err = yaml.Unmarshal(b, &temp); err == nil {
-			// region 第一步 先查询相关数据 并更新数据
-			aiFramwork, err := GetQtAiFrameworkById(m.AiFrameworkId)
-			if err != nil {return err}
-
-			temp.Modeldcfgname = aiFramwork.Cfg
-			temp.Image = fmt.Sprintf("%s:%s", aiFramwork.BaseImageUrl, aiFramwork.ImageVersion)
-			temp.Volume = aiFramwork.Volume
-
-			project, err := GetQtProjectsById(m.ProjectId)
-			if err != nil {return err}
-			temp.ProjectPath = project.AssetsPath
-			// endregion
-			// region 第二步 更新数据 发布到队列
-			temp.Batchsize =  m.Batchsize
-			temp.Maxiter =  m.Maxiter
-			temp.Imagesize =  []int {m.Imagewidth, m.Imageheight}
-			temp.Modelname =  m.Taskid
-			temp.Triantype =  m.Triantype
-			temp.Pretrainweight =  m.Pretrainweight
-			temp.Pretraincfgname = m.Pretrainweight
-			temp.Gpus =  m.Gpus
-			temp.Singletrain =  m.Singletrain[:]
-			temp.Angle =  m.Angle
-			temp.Cell_stride =  m.Cell_stride
-			temp.Cellsize =  m.Cellsize
-			temp.Expand_size =  m.Expand_size[:]
-			temp.Ignore_size =  m.Ignore_size[:]
-			temp.Resizearrange =  m.Resizearrange[:]
-			temp.Trainwithnolabelpic =  m.Trainwithnolabelpic
-			temp.Subdivisionssize =  m.Subdivisionssize
-			temp.Rmgeneratedata =  m.Rmgeneratedata
-			temp.Split_ratio =  m.Split_ratio
-			temp.Recalldatum =  m.Recalldatum
-			temp.Otherlabeltraintype =  m.Otherlabeltraintype
-			temp.MergeTrainSymbol =  m.Mergetrainsymbol
-
-			temp.ProjectName = project.ProjectName
-			temp.ProjectId = project.Id
-			temp.TaskId = m.Taskid
-			temp.ProviderType = m.Providertype
-
-			temp.Isshuffle = m.Isshuffle
-			temp.Otherlabelstride = m.Otherlabelstride
-			temp.Learnrate = m.Learnrate
-
-			data, _ := yaml.Marshal(temp)
-			Publish(string(data))
-			// endregion
-			// region 第三步 插入数据到数据库
-			record := &QtTrainRecord{
-				TaskId:        m.Taskid,
-				TaskName:      m.Taskname,
-				ProjectId:     &QtProjects{Id: m.ProjectId},
-				Status:        WaitingInt,
-				AiFrameworkId: aiFramwork,
-				AssetsType:    m.Assetstype,
-				IsJump:        0,
-				DrawUrl: fmt.Sprintf("..%s/%s/training_data/train_%s/chart.png",
-					beego.AppConfig.DefaultString("ProjectPathStaticDir", "/qting"),
-					project.ProjectName, m.Taskid),
-				CreateTime: time.Now(),
-			}
-			_, err = AddQtTrainRecord(record)
-			if err != nil {return err}
-			if beego.AppConfig.DefaultBool("saveRabbitmqInfo", false) {
-				qqtTrainRecord, _ := GetQtTrainRecordByTaskId(m.Taskid)
-				_, _ = AddQtRabbitmqInfo(&QtRabbitmqInfo{
-					RecordId: qqtTrainRecord,
-					Queue:    beego.AppConfig.DefaultString("queue_name", "ai.train.topic-queue"),
-					Message:  string(data),
-				})
-			}
-			// endregion
-			return nil
-		} else {
-			return err
-		}
-	} else {
-		return err
-	}
+func StartTrain(trainBConfig *TrainBaseConfig, data string)(err error) {
+	pluginFileName := trainBConfig.ProviderType + beego.AppConfig.DefaultString("pluginSuffix", ".yn")
+	logrus.WithFields(logrus.Fields{
+		"pluginFileName":    pluginFileName,
+	}).Info("开始调用训练...")
+	_, err = tools.PluginRun(pluginFileName, "Train", data)
+	return err
 }
 
 func StopTrain(taskId string, status string, statusCode int) (err error) {
@@ -305,9 +238,8 @@ func updateStatus(fs afero.Fs, statusFile string, status string, statusCode int,
 
 func cronFunc() {
 	if ok, msgBody := GetMsg(false); ok == true {
-		var trainConfig TrainConfig
+		var trainConfig TrainBaseConfig
 		if err := yaml.Unmarshal(msgBody, &trainConfig); err == nil {
-			if data, err := yaml.Marshal(trainConfig); err == nil {
 				//logrus.Debug(string(data))
 				savePath := beego.AppConfig.DefaultString("ProjectPath", "/qtingvisionfolder/Projects/") + trainConfig.ProjectName + "/training_data/"
 				fs := afero.NewOsFs()
@@ -353,7 +285,7 @@ func cronFunc() {
 							updateStatus(fs, statusFile, Done, DoneInt, trainConfig.TaskId, "")
 							// region 此处加载插件业务逻辑
 							pluginFileName := trainConfig.ProviderType + beego.AppConfig.DefaultString("pluginSuffix", ".yn")
-							_, err = tools.PluginRun(pluginFileName, "Run", trainConfig.TaskId, trainConfig.ProjectName, trainConfig.ProviderType)
+							_, err = tools.PluginRun(pluginFileName, "Done", trainConfig.TaskId, trainConfig.ProjectName, trainConfig.ProviderType)
 							// endregion
 							break
 						case Failed:
@@ -367,19 +299,10 @@ func cronFunc() {
 							break
 						}
 					} else { // 状态文件不存在
-						logrus.WithField("taskId", trainConfig.TaskId).Info("开始训练")
-						if err = fs.MkdirAll(savePath, 0755); err == nil {
-
-							if err = afero.WriteFile(fs, statusFile, []byte(Waiting), 0755); err == nil {
-								err = afero.WriteFile(fs, savePath+"config.yaml", data, 0755)
-								//go tools.GetMsg(true)
-							} else {
-								logrus.WithField("taskId", trainConfig.TaskId).Error("训练失败")
-							}
-						}
+						logrus.WithField("taskId", trainConfig.TaskId).Error("训练失败, 状态文件不存在")
+						updateStatus(fs, statusFile, Failed, FailedInt, trainConfig.TaskId, "")
 					}
 				}
-			}
 		} else {
 			logrus.Error(fmt.Sprintf("%+v", errors.Wrap(err, "队列训练数据有误->需要处理执行出错")))
 			GetMsg(true)
